Controller Pro 1.0.11
=====================

New Features:

  - Direct HTTP related logging into its own file in /logs/http/http.log
    (Juha Lindfors) (ORCJAVA-368)
  - Have Samsung protocol as separate jar for Pro release (ORCJAVA-381)

Bug Fixes:

  - Reliability updates to Russound integration (Torbjorn Osterdahl) (ORCJAVA-376)
  - Guard against null pointer exception in RRD logger lifecycle
    (Juha Lindfors) (ORCJAVA-356)
  - Fix lagarto configuration to read its settings from controller.xml
    in addition to the config.properties file (Juha Lindfors) (ORCJAVA-264)
  - X10: patch for potential race condition between thread deallocating 
    gateway and thread processing serial port input (Juha Lindfors, ORCJAVA-359)
  - Fix ISY-99 connection error messages at regular interval (ORCJAVA-372)
  - Vera protocol implementation exception at startup (ORCJAVA-403)

Controller Pro 1.0.10
=====================

New Features:

  - Add Port Abstraction Daemon (PAD) source files to project (ORCJAVA-314 + ORCJAVA-375)
  - EnOcean Implementation (Rainer Hitz) (ORCJAVA-348)
  - Rewrite TCP for EventListener interface (Marcus Redeker) (ORCJAVA-298)

Bug Fixes:

  - Fix an NPE in lagarto command caused by undetermined
    initialization order between ExecutableCommand and
    EventListener implementations (Juha Lindfors) (ORCJAVA-346)

Controller Pro 1.0.9
====================

New Features:

  - Include Web Console 2.1.0, r7746 (ORCJAVA-333)
  
Bug Fixes:

  - ISY-99 implementation does not scale to high number of
    sensors (Kevin Purney) (ORCJAVA-325)
  - Telnet status read for switch sensors appears broken. A returned
    'on' string is never correctly parsed to Java boolean value true
    due to the extra linefeed '\n' character being added to all response
    values in readString() implementation (ORCJAVA-326)
  - Telnet log configuration (ORCJAVA-328)
  - The controller build script does not mandate an explicit character